k8s/auth-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-deployment
  namespace: greenops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-auth
  template:
    metadata:
      labels:
        app: backend-auth
    spec:
      containers:
        - name: backend-auth
          image: node:18-alpine
          command: ["node", "-e", "console.log('Service Auth connecte a Postgres'); setInterval(() => {}, 1000);"]
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "200m"
          ports:
            - containerPort: 5000
