k8s/auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: greenops
spec:
  selector:
    app: backend-auth
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP
