k8s/metrics-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: metrics-service
  namespace: greenops
spec:
  selector:
    app: backend-metrics
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP
